# envrc-switcher

./: .gitignore  .markdownlintrc  .yamllint  CLAUDE.md  PACKAGING.md  README.md  Taskfile.yaml  Taskfile.yml  pyproject.toml
.claude/: settings.local.json
envrc_switcher/: __main__.py  cli.py  configs.py  switcher.py
tests/: test_cli.py  test_configs.py  test_switcher.py
